--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -33,13 +33,15 @@
     "ethers": "^6.13.4",
     "maci-contracts": "^2.5.0",
     "maci-crypto": "^2.5.0",
-    "maci-domainobjs": "^2.5.0"
+    "maci-domainobjs": "^2.5.0",
+    "snarkjs": "^0.7.5"
   },
   "devDependencies": {
     "@types/chai": "^4.3.9",
     "@types/chai-as-promised": "^7.1.8",
     "@types/mocha": "^10.0.8",
     "@types/node": "^22.9.0",
+    "@types/snarkjs": "^0.7.9",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.2",
     "mocha": "^10.7.3",
