--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "clean": "lerna exec -- rm -rf node_modules build && rm -rf node_modules",
     "commit": "git cz",
     "download-zkeys:test": "ts-node ./.github/scripts/downloadZkeys.ts test ./packages/cli/zkeys",
+    "download-zkeys:test:relayer": "ts-node ./.github/scripts/downloadZkeys.ts test ./apps/relayer/zkeys",
     "download-zkeys:ceremony": "ts-node ./.github/scripts/downloadZkeys.ts prod ./packages/cli/zkeys",
+    "download-zkeys:ceremony:relayer": "ts-node ./.github/scripts/downloadZkeys.ts prod ./apps/relayer/zkeys",
     "prettier": "prettier -c .",
     "prettier:fix": "prettier -w .",
     "lint:ts": "eslint './**/**/*.ts' './**/**/*.tsx'",
