--- a/apps/relayer/package.json
+++ b/apps/relayer/package.json
@@ -45,6 +45,8 @@
     "helia": "^5.2.0",
     "helmet": "^8.0.0",
     "lodash": "^4.17.21",
+    "maci-circuits": "workspace:^2.5.0",
+    "maci-cli": "workspace:^2.5.0",
     "maci-contracts": "workspace:^2.5.0",
     "maci-domainobjs": "workspace:^2.5.0",
     "mongoose": "^8.9.5",
