--- a/apps/relayer/jest.config.json
+++ b/apps/relayer/jest.config.json
@@ -18,6 +18,7 @@
       }
     ]
   },
+  "setupFilesAfterEnv": ["<rootDir>/ts/jest/setup.ts"],
   "preset": "ts-jest/presets/default-esm",
   "moduleNameMapper": {
     "^(\\.{1,2}/.*)\\.[jt]s$": "$1"
@@ -25,6 +26,7 @@
   "extensionsToTreatAsEsm": [".ts"],
   "collectCoverageFrom": [
     "**/*.(t|j)s",
+    "!<rootDir>/tests/*.ts",
     "!<rootDir>/ts/main.ts",
     "!<rootDir>/ts/jest/*.js",
     "!<rootDir>/hardhat.config.js"
