--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -26,48 +26,25 @@
     "build": "tsc -p tsconfig.build.json",
     "postbuild": "cp package.json ./build && mkdir -p ./zkeys",
     "types": "tsc -p tsconfig.json --noEmit",
-    "test": "nyc ts-mocha --exit tests/unit/*.test.ts",
+    "test": "jest",
+    "test:coverage": "pnpm run test --coverage",
     "docs": "typedoc --plugin typedoc-plugin-markdown --options ./typedoc.json"
   },
   "dependencies": {
+    "@zk-kit/lean-imt": "^2.2.2",
     "ethers": "^6.13.4",
     "maci-contracts": "^2.5.0",
     "maci-crypto": "^2.5.0",
-    "maci-domainobjs": "^2.5.0",
-    "@zk-kit/lean-imt": "^2.2.2"
+    "maci-domainobjs": "^2.5.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.9",
-    "@types/chai-as-promised": "^7.1.8",
-    "@types/mocha": "^10.0.8",
+    "@types/jest": "^29.5.2",
     "@types/node": "^22.12.0",
     "@types/snarkjs": "^0.7.9",
-    "chai": "^4.3.10",
-    "chai-as-promised": "^7.1.2",
+    "jest": "^29.5.0",
     "mocha": "^11.1.0",
     "nyc": "^17.1.0",
-    "ts-mocha": "^10.0.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
-  },
-  "nyc": {
-    "reporter": [
-      "text",
-      "lcov"
-    ],
-    "extensions": [
-      ".ts"
-    ],
-    "all": true,
-    "exclude": [
-      "**/*.js",
-      "**/*.d.ts",
-      "hardhat.config.ts",
-      "tests/**/*.ts",
-      "ts/index.ts"
-    ],
-    "branches": ">50%",
-    "lines": ">50%",
-    "functions": ">50%",
-    "statements": ">50%"
   }
 }
