--- a/apps/website/.gitignore
+++ b/apps/website/.gitignore
@@ -24,3 +24,8 @@ versioned_docs/version-v2.x/developers-references/typescript-code/typedoc/
 versioned_docs/version-v2.x/developers-references/smart-contracts/solidity-docs/
 versioned_docs/version-v2.x/technical-references/typescript-code/typedoc/
 versioned_docs/version-v2.x/technical-references/smart-contracts/solidity-docs/
+
+versioned_docs/version-v3.x/developers-references/typescript-code/typedoc/
+versioned_docs/version-v3.x/developers-references/smart-contracts/solidity-docs/
+versioned_docs/version-v3.x/technical-references/typescript-code/typedoc/
+versioned_docs/version-v3.x/technical-references/smart-contracts/solidity-docs/
