feat(relayer): add deploy scripts - [x] Update imports for using esm - [x] Add docker support - [x] Add health check endpoint

--- a/apps/relayer/package.json
+++ b/apps/relayer/package.json
@@ -17,7 +17,7 @@
     "hardhat": "hardhat node",
     "build": "nest build",
     "run:node": "node --import 'data:text/javascript,import { register } from \"node:module\"; import { pathToFileURL } from \"node:url\"; register(\"ts-node/esm\", pathToFileURL(\"./\"));'",
-    "start": "pnpm run run:node ./ts/main.ts",
+    "start": "nest start",
     "start:prod": "pnpm run run:node build/ts/main.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --forceExit",
     "test:coverage": "pnpm run test --coverage",
@@ -45,10 +45,10 @@
     "helia": "^5.2.0",
     "helmet": "^8.0.0",
     "lodash": "^4.17.21",
-    "maci-cli": "workspace:^2.5.0",
-    "maci-sdk": "workspace:^0.0.1",
-    "maci-domainobjs": "workspace:^2.5.0",
-    "maci-contracts": "workspace:^2.5.0",
+    "maci-cli": "^2.5.0",
+    "maci-sdk": "^0.0.1",
+    "maci-domainobjs": "^2.5.0",
+    "maci-contracts": "^2.5.0",
     "mongoose": "^8.9.7",
     "multiformats": "^13.3.1",
     "mustache": "^4.2.0",
