feat(deployer): add service in maci repo
feat(deployer): testing e2e

feat(coordinator): comment out send gas func in tests

feat(coordinator): deploy maci and deploy poll works

feat(coordinator): re-organize tests

feat(coordinator): send json in endpoints

feat(coordinator): recharge gas + subgraph deploy + prove tests

feat(coordinator): deploy subgraph correctly + vote in poll

feat(coordinator): rebase with sdk

feat(coordinator): add service in maci repo

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "commit": "git cz",
     "download-zkeys:test": "ts-node ./.github/scripts/downloadZkeys.ts test ./packages/cli/zkeys",
     "download-zkeys:test:relayer": "ts-node ./.github/scripts/downloadZkeys.ts test ./apps/relayer/zkeys",
+    "download-zkeys:test:coordinator": "ts-node ./.github/scripts/downloadZkeys.ts test ./apps/coordinator/zkeys",
     "download-zkeys:ceremony": "ts-node ./.github/scripts/downloadZkeys.ts prod ./packages/cli/zkeys",
     "download-zkeys:ceremony:relayer": "ts-node ./.github/scripts/downloadZkeys.ts prod ./apps/relayer/zkeys",
+    "download-zkeys:ceremony:coordinator": "ts-node ./.github/scripts/downloadZkeys.ts prod ./apps/coordinator/zkeys",
     "prettier": "prettier -c .",
     "prettier:fix": "prettier -w .",
     "lint:ts": "eslint './**/**/*.ts' './**/**/*.tsx'",
