test(relayer): add more e2e tests - [x] Minor refactoring for relayer sdk - [x] Add relayed messages for integration tests - [x] Add relayed messages for e2e cli tests - [x] Minor refactoring for maci state generation

--- a/.github/workflows/relayer-build.yml
+++ b/.github/workflows/relayer-build.yml
@@ -16,6 +16,7 @@ env:
   MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
   MONGODB_DATABASE: ${{ secrets.MONGODB_DATABASE }}
   MNEMONIC: ${{ secrets.RELAYER_MNEMONIC }}
+  CRON_EXPRESSION: ${{ secrets.CRON_EXPRESSION }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
