--- a/apps/relayer/docker-compose.yml
+++ b/apps/relayer/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - MONGODB_PASSWORD=${MONGODB_PASSWORD}
       - MONGODB_DATABASE=${MONGODB_DATABASE}
       - MNEMONIC=${MNEMONIC}
+      - CRON_EXPRESSION=${CRON_EXPRESSION}
     depends_on:
       - mongodb
     networks:
