--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -34,9 +34,10 @@
     "@zk-kit/lean-imt": "^2.2.2",
     "ethers": "^6.13.4",
     "maci-contracts": "^2.5.0",
+    "maci-core": "^2.5.0",
     "maci-crypto": "^2.5.0",
     "maci-domainobjs": "^2.5.0",
-    "maci-core": "^2.5.0"
+    "multiformats": "^9"
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
