--- a/apps/relayer/package.json
+++ b/apps/relayer/package.json
@@ -68,6 +68,7 @@
     "@types/supertest": "^6.0.2",
     "fast-check": "^3.23.2",
     "jest": "^29.5.0",
+    "maci-testing": "^0.1.0",
     "mongodb-memory-server": "^10.1.4",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
