refactor(cli): use contract storage for cli

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,20 +26,20 @@
     "build": "tsc -p tsconfig.build.json",
     "postbuild": "cp package.json ./build && mkdir -p ./zkeys",
     "types": "tsc -p tsconfig.json --noEmit",
-    "test": "nyc ts-mocha --exit tests/e2e/*.test.ts tests/unit/*.test.ts",
-    "test:ceremony": "ts-mocha --exit tests/ceremony-params/ceremonyParams.test.ts",
-    "test:e2e": "ts-mocha --exit tests/e2e/e2e.test.ts",
-    "test:e2e-non-qv": "ts-mocha --exit tests/e2e/e2e.nonQv.test.ts",
-    "test:keyChange": "ts-mocha --exit tests/e2e/keyChange.test.ts",
-    "test:unit": "nyc ts-mocha --exit tests/unit/*.test.ts",
-    "test:airdrop": "nyc ts-mocha --exit tests/unit/airdrop.test.ts",
-    "test:genPubKey": "ts-mocha --exit tests/unit/genPubKey.test.ts",
-    "test:genKeypair": "ts-mocha --exit tests/unit/genKeyPair.test.ts",
-    "test:joinPoll": "ts-mocha --exit tests/unit/joinPoll.test.ts",
-    "test:timeTravel": "ts-mocha --exit tests/unit/timeTravel.test.ts",
-    "test:fundWallet": "ts-mocha --exit tests/unit/fundWallet.test.ts",
-    "test:signup": "ts-mocha --exit tests/unit/signup.test.ts",
-    "test:utils": "ts-mocha --exit tests/unit/utils.test.ts",
+    "test": "NODE_ENV=test nyc ts-mocha --exit tests/e2e/*.test.ts tests/unit/*.test.ts",
+    "test:ceremony": "NODE_ENV=test ts-mocha --exit tests/ceremony-params/ceremonyParams.test.ts",
+    "test:e2e": "NODE_ENV=test ts-mocha --exit tests/e2e/e2e.test.ts",
+    "test:e2e-non-qv": "NODE_ENV=test ts-mocha --exit tests/e2e/e2e.nonQv.test.ts",
+    "test:keyChange": "NODE_ENV=test ts-mocha --exit tests/e2e/keyChange.test.ts",
+    "test:unit": "NODE_ENV=test nyc ts-mocha --exit tests/unit/*.test.ts",
+    "test:airdrop": "NODE_ENV=test nyc ts-mocha --exit tests/unit/airdrop.test.ts",
+    "test:genPubKey": "NODE_ENV=test ts-mocha --exit tests/unit/genPubKey.test.ts",
+    "test:genKeypair": "NODE_ENV=test ts-mocha --exit tests/unit/genKeyPair.test.ts",
+    "test:joinPoll": "NODE_ENV=test ts-mocha --exit tests/unit/joinPoll.test.ts",
+    "test:timeTravel": "NODE_ENV=test ts-mocha --exit tests/unit/timeTravel.test.ts",
+    "test:fundWallet": "NODE_ENV=test ts-mocha --exit tests/unit/fundWallet.test.ts",
+    "test:signup": "NODE_ENV=test ts-mocha --exit tests/unit/signup.test.ts",
+    "test:utils": "NODE_ENV=test ts-mocha --exit tests/unit/utils.test.ts",
     "docs": "typedoc --plugin typedoc-plugin-markdown --options ./typedoc.json"
   },
   "dependencies": {
