--- a/.github/workflows/reusable-e2e.yml
+++ b/.github/workflows/reusable-e2e.yml
@@ -92,6 +92,8 @@ jobs:
 
       - name: ${{ matrix.command }}
         run: pnpm run ${{ matrix.command }}
+        env:
+          NODE_ENV: test
 
       - name: Stop Hardhat
         if: always()
