--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "setup:zkeys": "NODE_OPTIONS=--max-old-space-size=4096 lerna run gen-zkeys --scope \"maci-circuits\"",
     "clean": "lerna exec -- rm -rf node_modules build && rm -rf node_modules",
     "commit": "git cz",
-    "download-zkeys:test": "ts-node ./.github/scripts/downloadZkeys.ts test ./packages/cli/zkeys",
+    "download-zkeys:test": "ts-node ./.github/scripts/downloadZkeys.ts test ./packages/testing/zkeys",
     "download-zkeys:test:relayer": "ts-node ./.github/scripts/downloadZkeys.ts test ./apps/relayer/zkeys",
     "download-zkeys:test:coordinator": "ts-node ./.github/scripts/downloadZkeys.ts test ./apps/coordinator/zkeys",
-    "download-zkeys:ceremony": "ts-node ./.github/scripts/downloadZkeys.ts prod ./packages/cli/zkeys",
+    "download-zkeys:ceremony": "ts-node ./.github/scripts/downloadZkeys.ts prod ./packages/testing/zkeys",
     "download-zkeys:ceremony:relayer": "ts-node ./.github/scripts/downloadZkeys.ts prod ./apps/relayer/zkeys",
     "download-zkeys:ceremony:coordinator": "ts-node ./.github/scripts/downloadZkeys.ts prod ./apps/coordinator/zkeys",
     "prettier": "prettier -c .",
@@ -24,10 +24,11 @@
     "lint:ts:fix": "pnpm run lint:ts --fix",
     "lint:sol": "solhint './packages/contracts/contracts/**/*.sol'",
     "lint:sol:fix": "pnpm run lint:sol --fix --noPrompt",
-    "test:cli": "lerna run test --scope \"maci-cli\"",
-    "test:cli-ceremony": "lerna run test:ceremony --scope \"maci-cli\"",
-    "test:integration": "lerna run test --scope \"maci-integrationtests\"",
-    "test": "lerna run test --ignore maci-integrationtests --ignore maci-cli",
+    "test:cli": "lerna run test:unit --scope \"maci-cli\"",
+    "test:ceremony": "lerna run test:ceremony --scope \"maci-testing\"",
+    "test:integration": "lerna run test:integration --scope \"maci-testing\"",
+    "test:e2e": "lerna run test:e2e --scope \"maci-testing\"",
+    "test": "lerna run test --ignore maci-cli --ignore maci-testing",
     "types": "lerna run types",
     "docs": "lerna run docs",
     "prepare": "is-ci || husky",
