feat(coordinator): submit on chain using SDK
fix(coordinator): signup not working

feat(coordinator): add KernelToSigner class

feat(coordinator): KernelToSigner applied

fix(coordinator): use latest permissionless

feat(coordinator): deployMaciWithSigner

feat(coordinator): deploy verifier in deployMaciWithSigner

feat(coordinator): deploy maci with signer

fix(coordinator): use only sdk and not contracts package

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -66,6 +66,7 @@
     "test:erc20_votes_policy": "pnpm run test ./tests/policies/ERC20Votes.test.ts",
     "deploy": "hardhat deploy-full",
     "deploy-poll": "hardhat deploy-poll",
+    "encode-errors": "hardhat encode-errors",
     "verify": "hardhat verify-full",
     "merge": "hardhat merge",
     "prove": "hardhat prove",
