--- a/apps/coordinator/.env.example
+++ b/apps/coordinator/.env.example
@@ -23,7 +23,7 @@ COORDINATOR_POLL_JOINING_ZKEY_NAME=PollJoining_10_test
 # https://maci.pse.dev/docs/trusted-setup
 COORDINATOR_POLL_JOINED_ZKEY_NAME=PollJoined_10_test
 
-# Rapidsnark executable path
+# Rapidsnark executable path (e.g. /home/<YOUR_USER>/rapidsnark/package/bin/prover)
 COORDINATOR_RAPIDSNARK_EXE=
 
 # Location of zkey, wasm files
@@ -48,16 +48,16 @@ SUBGRAPH_NAME="maci-platform-subgraph"
 # Subgraph provider url
 SUBGRAPH_PROVIDER_URL=https://api.studio.thegraph.com/deploy/
 
-# Subgraph deploy key (remember to get the key from the subgraph page. It is called "DEPLOY KEY")
+# Subgraph deploy key (remember to get the key from the subgraph page. It is called "DEPLOY KEY". It is not the API KEY top navbar button)
 SUBGRAPH_DEPLOY_KEY=
 
 # Subgraph project folder
 SUBGRAPH_FOLDER=./node_modules/maci-subgraph
 
-# RPC URL for Zerodev bundler on OP sepolia
+# RPC URL for Zerodev bundler on OP sepolia (RPC v3)
 ZERODEV_BUNDLER_RPC_OP_SEPOLIA=""
 
-# RPC URL for Zerodev bundler on OP mainnet
+# RPC URL for Zerodev bundler on OP mainnet (RPC v3)
 ZERODEV_BUNDLER_RPC_OP=""
 
 # RPC API KEY for Alchemy
