feat(coordinator): submit on chain using SDK
fix(coordinator): signup not working

feat(coordinator): add KernelToSigner class

feat(coordinator): KernelToSigner applied

fix(coordinator): use latest permissionless

feat(coordinator): deployMaciWithSigner

feat(coordinator): deploy verifier in deployMaciWithSigner

feat(coordinator): deploy maci with signer

fix(coordinator): use only sdk and not contracts package

feat(coordinator): deploy erc20 votes policy

feat: deployer service with local signer

feat(coordinator): fix rebase issues

refactor(coordinator): remove setVerifyingKeys change

--- a/apps/coordinator/.env.example
+++ b/apps/coordinator/.env.example
@@ -23,7 +23,7 @@ COORDINATOR_POLL_JOINING_ZKEY_NAME=PollJoining_10_test
 # https://maci.pse.dev/docs/trusted-setup
 COORDINATOR_POLL_JOINED_ZKEY_NAME=PollJoined_10_test
 
-# Rapidsnark executable path
+# Rapidsnark executable path (e.g. /home/<YOUR_USER>/rapidsnark/package/bin/prover)
 COORDINATOR_RAPIDSNARK_EXE=
 
 # Location of zkey, wasm files
@@ -48,16 +48,16 @@ SUBGRAPH_NAME="maci-platform-subgraph"
 # Subgraph provider url
 SUBGRAPH_PROVIDER_URL=https://api.studio.thegraph.com/deploy/
 
-# Subgraph deploy key (remember to get the key from the subgraph page. It is called "DEPLOY KEY")
+# Subgraph deploy key (remember to get the key from the subgraph page. It is called "DEPLOY KEY". It is not the API KEY top navbar button)
 SUBGRAPH_DEPLOY_KEY=
 
 # Subgraph project folder
-SUBGRAPH_FOLDER=./node_modules/maci-subgraph
+SUBGRAPH_FOLDER=./node_modules/@maci-protocol/subgraph
 
-# RPC URL for Zerodev bundler on OP sepolia
+# RPC URL for Zerodev bundler on OP sepolia (RPC v3)
 ZERODEV_BUNDLER_RPC_OP_SEPOLIA=""
 
-# RPC URL for Zerodev bundler on OP mainnet
+# RPC URL for Zerodev bundler on OP mainnet (RPC v3)
 ZERODEV_BUNDLER_RPC_OP=""
 
 # RPC API KEY for Alchemy
@@ -69,3 +69,6 @@ TEST_PRIVATE_KEY=""
 # Storage for metadata
 # Create a Blob database and get token here: https://vercel.com/dashboard/stores?type=blob
 BLOB_READ_WRITE_TOKEN=
+
+# A private key for deploying contracts (in case of not using AA flow)
+PRIVATE_KEY=""
