--- a/apps/coordinator/package.json
+++ b/apps/coordinator/package.json
@@ -24,7 +24,8 @@
     "start:prod": "pnpm run run:node build/ts/main.js",
     "test": "jest --testPathIgnorePatterns=e2e.aa.test.ts --forceExit",
     "test:coverage": "jest --coverage --forceExit",
-    "test:e2e": "jest --forceExit ./tests/e2e.aa.test.ts",
+    "test:e2e": "jest ./tests/e2e.deploy.test.ts --forceExit",
+    "test:aa": "jest ./tests/e2e.aa.test.ts --forceExit",
     "types": "tsc -p tsconfig.json --noEmit",
     "generate-maci-keypair": "pnpm run run:node ./scripts/generateMaciKeypair.ts",
     "generate-keypair": "pnpm run run:node ./scripts/generateKeypair.ts",
@@ -52,12 +53,13 @@
     "hardhat": "^2.23.0",
     "helmet": "^8.1.0",
     "lowdb": "^1.0.0",
+    "@maci-protocol/contracts": "^3.0.0",
     "@maci-protocol/crypto": "^3.0.0",
     "@maci-protocol/domainobjs": "^3.0.0",
     "@maci-protocol/sdk": "^1.0.0",
     "@maci-protocol/subgraph": "^3.0.0",
     "mustache": "^4.2.0",
-    "permissionless": ">=0.1.18 <=0.1.29",
+    "permissionless": ">=0.1.18 <=0.2.38",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.2",
     "socket.io": "^4.7.5",
