chore: explicity define packages as not private

--- a/apps/coordinator/package.json
+++ b/apps/coordinator/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@maci-protocol/maci-coordinator",
   "version": "1.0.0",
+  "private": false,
   "description": "Coordinator service for MACI",
   "main": "build/ts/main.js",
   "type": "module",
