--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@maci-protocol/sdk",
   "version": "1.0.0",
+  "private": false,
   "description": "MACI's SDK",
   "main": "build/ts/index.js",
   "exports": {
