--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@maci-protocol/website",
   "version": "1.0.0",
+  "private": false,
   "scripts": {
     "setup-typedoc": "ts-node ./src/scripts/setupTypedoc.ts",
     "setup-soliditydocs": "ts-node ./src/scripts/setupSolidityDocs.ts",
