chore: move sdk unit tests to reusable e2e workflow

--- a/.github/workflows/reusable-e2e.yml
+++ b/.github/workflows/reusable-e2e.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        command: ["test:e2e", "test:integration"]
+        command: ["test:e2e", "test:integration", "test:unit"]
 
     runs-on: ubuntu-24.04
 
